Update and rename 2018-12-31-c3ctf-writeup.md to 2018-12-31-35c3ctf-writeup.md

--- a/_posts/2018-12-31-35c3ctf-writeup.md
+++ b/_posts/2018-12-31-35c3ctf-writeup.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "2018 C3 CTF writeup"
+title:  "2018 35C3 CTF writeup"
 date:   2018-12-31 23:19:44 +0800
 ---
 
-2018 C3 CTF writeup
+2018 35C3 CTF writeup
 
 ***
 
@@ -18,10 +18,10 @@ date:   2018-12-31 23:19:44 +0800
 > The NSA gave us these packets, they said it should be just enough to break this crypto.
 
 ### Attachments
-See [attachments](https://github.com/roadicing/ctf-writeups/tree/main/2018/c3ctf/unofficial/attachments).
+See [attachments](https://github.com/roadicing/ctf-writeups/tree/main/2018/35c3ctf/unofficial/attachments).
 
 ### Solutions
-See [solutions](https://github.com/roadicing/ctf-writeups/tree/main/2018/c3ctf/unofficial/solutions).
+See [solutions](https://github.com/roadicing/ctf-writeups/tree/main/2018/35c3ctf/unofficial/solutions).
 
 ***
 
@@ -35,7 +35,7 @@ See [solutions](https://github.com/roadicing/ctf-writeups/tree/main/2018/c3ctf/u
 > Somebody asked for more crypto challenges, so we made one in the middle of the night. Now you better solve it.
 
 ### Attachments
-See [attachments](https://github.com/roadicing/ctf-writeups/tree/main/2018/c3ctf/post-quantum/attachments).
+See [attachments](https://github.com/roadicing/ctf-writeups/tree/main/2018/35c3ctf/post-quantum/attachments).
 
 ### Solutions
-See [solutions](https://github.com/roadicing/ctf-writeups/tree/main/2018/c3ctf/post-quantum/solutions).
+See [solutions](https://github.com/roadicing/ctf-writeups/tree/main/2018/35c3ctf/post-quantum/solutions).
